--- a/bootstrap/css/tuto.css
+++ b/bootstrap/css/tuto.css
@@ -33,10 +33,13 @@ body {
 #bloc-recherche {
 
 }
-#champs {
+
+/* champs de recherche dans le bloc recherche */
+#champs { 
   padding: 7px;
   line-height: 10px;
 }
+
 #btn_recherche
 {
 	margin-left: 20%;
@@ -54,12 +57,7 @@ body {
 } 
 
 
-.thumbnail img{
-	max-height:400px;
-	border: 5px solid black;
-	border-radius:10px;
-	
-}
+
 #top-movies {
 	text-align:center;
 } 
@@ -68,15 +66,20 @@ body {
 	border: 5px solid black;
 	border-radius:10px;
 }
-.download, .detail-movie  {
-	margin : 5px;
-}
 
 .thumbnail  {
 	text-align:center;
 	padding: 20px;
 	border-radius: 20px;
 }
+
+.thumbnail img{
+	max-height:400px;
+	border: 5px solid black;
+	border-radius:10px;
+	
+}
+/* résultat correspond au div qui encadre tous les films */
 .resultat .thumbnail  {
 	text-align:center;
 	height:550px;
@@ -100,11 +103,18 @@ body {
 	display:inline-block;
 }
 
+/* correspond aux boutons dans le thumbnail */
+.download, .detail-movie  {
+	margin : 5px;
+}
+
+/* paragraphe qui contient le nom du film */
 .film {
 	font-size:14pt;
 	#font-weight:bold;
 }
 
+/* image du film dans la page détail */
 .affiche-detail {
 	margin:10px;
 	max-height:250px;
