--- a/include/menu-top.html
+++ b/include/menu-top.html
@@ -1,12 +1,12 @@
 <div class="navbar navbar-default navbar-static-top" >
 		  <div class="container">
 			<div class="navbar-header">
-			  <a class="navbar-brand" href="/rufy">RUFY</a>
+			  <a class="navbar-brand" href="/RuFy">RUFY</a>
 			</div>
 			<ul class="nav navbar-nav">
 			  <li><a href="/rutorrent">Rutorrent</a></li>
 			  <li><a href="/cakebox">Cakebox</a></li>
-			  <li><a href="/sickbeard">SickBeard</a></li>
+			  <li><a href="/sickrage">SickRage</a></li>
 			  <li><a href="#">A Propos</a></li>
 			</ul>
 		  </div>
