modification du css pour la suggestion de films

--- a/bootstrap/css/tuto.css
+++ b/bootstrap/css/tuto.css
@@ -168,3 +168,11 @@ body {
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
 }
+
+.modal-dialog {
+    width: 800px;
+}
+
+.modal-dialog panel-primary {
+    margin: 5%;
+}
