--- a/include/alertes.html
+++ b/include/alertes.html
@@ -2,7 +2,7 @@
 
 <div class="alert alert-success alert-dismissable col-lg-4 alert-fixed-bottom" style="display: none">
     <button type="button" class="close">×</button>
-      <h4>Ajout réussi !</h4> Le téléchargement du film ... a commencé !
+      <h4>Ajout réussi !</h4> Le téléchargement du film a commencé !
   </div>
   
   
