--- a/include/menu-top.html
+++ b/include/menu-top.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-static-top" >
 		  <div class="container">
 			<div class="navbar-header">
-			  <a class="navbar-brand" href="/RuFy">RUFY</a>
+			  <a class="navbar-brand" href="/RuFy">RuFy</a>
 			</div>
 			<ul class="nav navbar-nav">
 			  <li><a href="/rutorrent">Rutorrent</a></li>
